--- a/FetchData.ipynb
+++ b/FetchData.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 22] Invalid argument: '../Trade.apikey/api.txt/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Your API key\u001b[39;00m\n\u001b[0;32m      6\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../Trade.apikey/api.txt/\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      8\u001b[0m     api_key \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Array of ticker symbols and their corresponding names\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 22] Invalid argument: '../Trade.apikey/api.txt/'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data for Apple saved successfully to fetch\\Apple_stock.json.\n",
+      "Data for Amazon saved successfully to fetch\\Amazon_stock.json.\n",
+      "Data for Netflix saved successfully to fetch\\Netflix_stock.json.\n",
+      "Data for Google  saved successfully to fetch\\Google _stock.json.\n",
+      "Data for Sony saved successfully to fetch\\Sony_stock.json.\n"
      ]
     }
    ],
@@ -62,37 +61,6 @@
     "        print(f\"Data for {arrf[i]} saved successfully to {file_path}.\")\n",
     "    else:\n",
     "        print(f\"Error for {arrf[i]}: {response.status_code} - {response.text}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "API Key: 4LTTgFF_iVHACyGC3ofVdpyz5XwWNAsX\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "# Define the path to the API key file\n",
-    "file_path = 'E:/Work/Trade.apikey/api.txt'\n",
-    "\n",
-    "# Check if the file exists\n",
-    "if os.path.exists(file_path):\n",
-    "    # Open and read the file\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        api_key = file.read().strip()  # Read the content and remove any extra whitespace\n",
-    "\n",
-    "    # Use the API key in your application\n",
-    "    print(\"API Key:\", api_key)\n",
-    "else:\n",
-    "    print(f\"File not found: {file_path}\")\n"
    ]
   }
  ],
