--- a/FetchData.ipynb
+++ b/FetchData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,8 @@
       "Data for Apple saved successfully to fetch\\Apple_stock.json.\n",
       "Data for Amazon saved successfully to fetch\\Amazon_stock.json.\n",
       "Data for Netflix saved successfully to fetch\\Netflix_stock.json.\n",
-      "Data for Google  saved successfully to fetch\\Google _stock.json.\n",
-      "Data for Sony saved successfully to fetch\\Sony_stock.json.\n"
+      "Data for Google saved successfully to fetch\\Google_stock.json.\n",
+      "Data for Tesla saved successfully to fetch\\Tesla_stock.json.\n"
      ]
     }
    ],
@@ -28,8 +28,8 @@
     "    api_key = file.read()\n",
     "\n",
     "# Array of ticker symbols and their corresponding names\n",
-    "arr = [\"AAPL\", \"AMZN\", \"NFLX\", \"GOOGL \", \"Sony\"]\n",
-    "arrf = [\"Apple\", \"Amazon\", \"Netflix\", \"Google \", \"Sony\"]\n",
+    "arr = [\"AAPL\", \"AMZN\", \"NFLX\", \"GOOG\", \"SONY\"]\n",
+    "arrf = [\"Apple\", \"Amazon\", \"Netflix\", \"Google\", \"Sony\"]\n",
     "\n",
     "# Specify the folder path relative to the current working directory\n",
     "folder_path = 'fetch'\n",
